# VK3809IP_ESP-IDF_Slider

./: CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig  sdkconfig.old
components/VK3809IP_Library/: CMakeLists.txt
components/VK3809IP_Library/src/: vk3809ip.cpp  vk3809ip.hpp
main/: CMakeLists.txt  i2c_port.c  i2c_port.h
main/example/: customInt3Key2Slider.cpp  defaultInt0Key1Slider.cpp  defaultLoop0Key1Slider.cpp  powerSaveInt0Key1Slider.cpp
