idf_component_register(SRCS
                                "i2c_port.c"
#                                "example/defaultLoop0Key1Slider.cpp"
#                                "example/defaultInt0Key1Slider.cpp"
                                "example/powerSaveInt0Key1Slider.cpp"
#                                "example/customInt3Key2Slider.cpp"
                               

                        INCLUDE_DIRS 
                                "."
                        )